frontend/jest_output_utf8.txt

> frontend@0.1.0 test
> react-scripts test src/App.test.js

node.exe : FAIL src/App.test.js
At C:\Program Files\nodejs\npm.ps1:29 
char:3
+   & $NODE_EXE $NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie 
   d: (FAIL src/App.test.js:String) [],   
  RemoteException
    + FullyQualifiedErrorId : NativeComma 
   ndError
 
  ΓùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This 
happens e.g. when your code or its 
dependencies use non-standard JavaScript 
syntax, or when Jest is not configured to 
support such syntax.

    Out of the box Jest supports Babel, 
which will be used to transform your 
files into valid JS based on your Babel 
configuration.

    By default "node_modules" folder is 
ignored by transformers.

    Here's what you can do:
     ΓÇó If you are trying to use 
ECMAScript Modules, see 
https://jestjs.io/docs/ecmascript-modules 
for how to enable it.
     ΓÇó If you are trying to use 
TypeScript, see https://jestjs.io/docs/get
ting-started#using-typescript
     ΓÇó To have some of your 
"node_modules" files transformed, you can 
specify a custom 
"transformIgnorePatterns" in your config.
     ΓÇó If you need a custom 
transformation specify a "transform" 
option in your config.
     ΓÇó If you simply want to mock your 
non-JS modules (e.g. binary assets) you 
can stub them out with the 
"moduleNameMapper" config option.

    You'll find more details and examples 
of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom 
transformations, see:
    
https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\dines\OneDrive\Desktop\Secure
_Healthcare_Management_System\frontend\src
\services\researchApi.js:9
    const API_URL = 
import.meta.env.VITE_API_URL || 
'http://localhost:5003/api/v1';
                           ^^^^

    SyntaxError: Cannot use 'import.meta' 
outside a module

    [0m [90m 2 |[39m [36mimport[39m 
{ [33mLink[39m[33m,[39m useNavigate } 
[36mfrom[39m 
[32m'react-router-dom'[39m[33m;[39m
     [90m 3 |[39m [36mimport[39m 
[33mThemeToggle[39m [36mfrom[39m [32m
'../../components/common/ThemeToggle'[39m
[33m;[39m
    [31m[1m>[22m[39m[90m 4 |[39m 
[36mimport[39m { researchApi } 
[36mfrom[39m [32m'../../services/resear
chApi'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 5 |[39m [36mimport[39m [32m
'../patient/Dashboard.css'[39m[33m;[39m
     [90m 6 |[39m
     [90m 7 |[39m [36mfunction[39m 
[33mDashboard[39m() {[0m

      at Runtime.createScriptFromCode (nod
e_modules/jest-runtime/build/index.js:1728
:14)
      at Object.<anonymous> 
(src/pages/researcher/Dashboard.jsx:4:1)
      at Object.<anonymous> 
(src/routes/AppRoutes.jsx:55:1)
      at Object.<anonymous> 
(src/App.js:4:1)
      at Object.<anonymous> 
(src/App.test.js:1:1)
      at TestScheduler.scheduleTests (node
_modules/@jest/core/build/TestScheduler.js
:333:13)
      at runJest (node_modules/@jest/core/
build/runJest.js:404:19)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.698 s
Ran all test suites matching 
/src\\App.test.js/i.

